fix(week11-DP) : 예제 코드 추가

--- a/sngjuni/DP/04_어댑터, 데코레이터 & 프록시.md
+++ b/sngjuni/DP/04_어댑터, 데코레이터 & 프록시.md
@@ -11,6 +11,29 @@
 
 **핵심 내용**
 
+```java
+// 기존 결제 시스템
+interface Payment {
+    void pay(int amount);
+}
+
+// 외부 결제 API (인터페이스 불일치)
+class TossPay {
+    void send(int money) { ... }
+}
+
+// Adapter
+class TossPaymentAdapter implements Payment {
+    private final TossPay tossPay = new TossPay();
+
+    @Override
+    public void pay(int amount) {
+        tossPay.send(amount); // 변환
+    }
+}
+
+```
+
 1. **역할 및 목적**
     - 인터페이스가 다른 두 객체를 연결해주는 브릿지 역할
     - 외부 라이브러리, 레거시 코드, 기존 시스템을 **수정 없이 통합**할 때 매우 유용
@@ -53,6 +76,85 @@
     - 데코레이터는 객체를 감싸는 형태로 기능을 추가하여 **런타임에 기능을 조합**할 수 있게 함
     - 기능을 추가하는 객체(Decorator)가 기존 객체(Component)와 동일한 인터페이스를 구현
 2. **구조**
+    
+    ```java
+    // Component (커피)
+    //   └ ConcreteComponent (아메리카노)
+    // Decorator (추가 옵션)
+    //   └ ConcreteDecorator (우유 추가 / 시럽 추가 / 휘핑 추가 ...)
+    
+    // Component
+    interface Coffee {
+        String getDescription();
+        int getCost();
+    }
+    
+    // Concrete Component
+    class Americano implements Coffee {
+        @Override
+        public String getDescription() {
+            return "Americano";
+        }
+    
+        @Override
+        public int getCost() {
+            return 3000;
+        }
+    }
+    
+    // Decorator
+    abstract class CoffeeDecorator implements Coffee {
+        protected Coffee coffee;  // 객체를 감싸서 확장
+    
+        public CoffeeDecorator(Coffee coffee) {
+            this.coffee = coffee;
+        }
+    
+        @Override
+        public String getDescription() {
+            return coffee.getDescription();
+        }
+    
+        @Override
+        public int getCost() {
+            return coffee.getCost();
+        }
+    }
+    
+    // Concrete Decorators
+    class Milk extends CoffeeDecorator {
+        public Milk(Coffee coffee) {
+            super(coffee);
+        }
+    
+        @Override
+        public String getDescription() {
+            return super.getDescription() + ", Milk";
+        }
+    
+        @Override
+        public int getCost() {
+            return super.getCost() + 500;
+        }
+    }
+    
+    class Whip extends CoffeeDecorator {
+        public Whip(Coffee coffee) {
+            super(coffee);
+        }
+    
+        @Override
+        public String getDescription() {
+            return super.getDescription() + ", Whip";
+        }
+    
+        @Override
+        public int getCost() {
+            return super.getCost() + 700;
+        }
+    }
+    ```
+    
     - **Component**: 핵심 인터페이스
     - **ConcreteComponent**: 기본 기능 제공
     - **Decorator**: Component 타입을 보유하면서 기능을 포장
