docs(week10-DP) : 싱글톤 & 팩토리 수정

--- a/aeongseo/DP/01_싱글톤 & 팩토리.md
+++ b/aeongseo/DP/01_싱글톤 & 팩토리.md
@@ -65,13 +65,16 @@
 
 class Singleton {
 private:
+    // Singleton 클래스의 생성자, private: 밖에서 객체 만들 수 없음
 	Singleton() {}
+    // 복사 생성자, 복사 대입 연산자도 private으로 막음
 	Singleton(const Singleton& ref) {}
 	Singleton& operator=(const Singleton& ref) {}
 	~Singleton() {}
 public:
+    // Singleton의 핵심 코드
 	static Singleton& getIncetance() {
-		static Singleton s;
+		static Singleton s; // 함수 내부의 static은 프로그램 전체에서 딱 한번 생성
 		return s;
 	}
 };
@@ -213,7 +216,7 @@ public:
     }
 };
 
-// 추상 팩토리
+// 추상 팩토리 (제품군 전체를 생성하는 인터페이스)
 class AbstractFactory {
 public:
     virtual ~AbstractFactory() = default;
