fix(week10-DB) : 분산 DB 오타 수정

--- a/aeongseo/DB/09_분산 DB.md
+++ b/aeongseo/DB/09_분산 DB.md
@@ -7,9 +7,11 @@
 
 **2. 분산 DB의 6가지 투명성(Transparency)**
 
+> 사용자가 분산되어 있다는 사실을 전혀 인식하지 못하도록 숨기는 성질
+
 - 분할 투명성(Fragmentation Transparency) : 하나의 논리적 관계가 여러 단편으로 분할되어 각 단편의 사본이 여러 Site에 저장
 - 위치 투명성(Location Transparency) : 사용하는 데이터의 저장 장소 명시할 필요 X. 위치 정보는 System Catalog에 유지
-- 중복 투명성(Replication Transparency) : DB 객체가 여러 site에 중복되어 있는지 알 필요 X
+- 중복/복제 투명성(Replication Transparency) : DB 객체가 여러 site에 중복되어 있는지 알 필요 X
 - 장애 투명성(Failure Transparency) : 일부 노드가 죽어도 정상 동작하는 것처럼 보임
 - 병행 투명성(Concurrency Transparency) : 여러 사용자가 동시에 접근해도 ACID를 만족하는 것처럼 일관된 결과만 보임
 
@@ -35,14 +37,14 @@
     - 수평 분할(Horizontal Fragmentation)
         - 테이블의 행 단위로 분리
         - 데이터를 한 군데 모아도 PK에 의해 중복 발생 X
-        - ex. 고객 1~10000 → 서버 A, 고객 10001~20000 → 서버 B
+        - ex. 고객 1-10000 → 서버 A, 고객 10001-20000 → 서버 B
     - 수직 분할(Vertical Fragmentation)
         - 테이블의 열 기준으로 분리
         - ex. user(id, name, email, phone, address, birthday) = (id, name, email) / (id, phone, address, birthday)
+    - 혼합 분할 (Hybrid) : 수평 + 수직 함께 사용
 - 테이블 복제 분산
     - 동일한 테이블을 다른 지역이나 서버에서 동시에 생성하여 분리
     - 데이터 복제하는데 많은 시간 소요, DB와 서버에 부하 발생
-    - 배치에 의해 복제되도록 함
     - 복제 방식
         - Master-Slave(Primary-Replica) : 쓰기는 Master, 읽기는 Slave
         - Multi-Master : 여러 서버가 읽기/쓰기 모두 가능, 각자 데이터를 받고, 서로 복제하여 일관성 맞춤
